2008-07-22  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* configure.ac, doc/cvlview.1, doc/cvlview.texi: Bump version to
	0.3.1.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/alloca.h: Remove generated file from SVN.

2008-07-04  Martin Lambers <marlam@marlam.de>

	* src/cvlview.cpp, src/dataset_selector.h: Show progress bar when
	saving a video, and allow to cancel the operation.
	* src/dataset_selector.h, src/dataset_selector.cpp: Add scan button to
	scan through the file and find out how many data sets it has.

2008-07-03  Martin Lambers <marlam@marlam.de>

	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
	Add a SpinBox that allows to jump to specific data sets.
	* src/dataset_selector.cpp: Fix.
	* src/frame_info.h, src/frame_info.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/cvlview.cpp, src/cvlview.qrc,
	src/Makefile.am: Move data set display from frame info to data set
	selector. Remove prev/next buttons because the SpinBox can do the
	same.
	* src/range_selector.cpp: Improve heuristics for default upper/lower
	bounds.
	* src/cvlview.cpp: Use the current view by default for the Save and
	Copy actions.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h: Add the
	capability to save videos to multi-frame PPM files.
	* NEWS: Update.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Clear the color buffer on initialization and on
	certain errors.
	* TODO: Update.

2008-07-01  Martin Lambers <marlam@marlam.de>

	* gllib/glvm.h: Add cbrt() functions.
	* gllib/glvm-color.h: Add CIE L*a*b* color space.
	* gllib/glvm.h: Small improvements and a bugfix.

2008-06-30  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
	it represents a rotation.
	* gllib/glvm.h: Improvements.
	* gllib/glvm-color.h, Makefile.am: New GLVM module for color space
	conversions.
	* src/view_area.cpp: Use glvm-color module.