@@ -57,20 +57,11 @@ AC_SEARCH_LIBS([clock_gettime], [rt])
 dnl Math library
 AC_SEARCH_LIBS([sqrtf], [m])
 
+dnl GLEW
+AM_GLEW()
+
 dnl CVL
-CVL_LIBS=""
-AC_LIB_HAVE_LINKFLAGS([cvl], [GLEW], 
-	[#include <cvl/cvl.h>
-	 #if CVL_VERSION_MAJOR < 0 || CVL_VERSION_MINOR < 2 || CVL_VERSION_PATCH < 5
-	 CVL version too old
-	 #endif], 
-	[cvl_init();])
-if test "$HAVE_LIBCVL" != "yes"; then
-	AC_MSG_ERROR([could not find CVL >= 0.2.5])
-else
-	CVL_LIBS="$LIBCVL"
-fi
-AC_SUBST([CVL_LIBS])
+AM_CVL([0], [2], [5])
 
 dnl Qt4
 AM_QT4()
