@@ -5,6 +5,8 @@
 	0.3.1.
 	* configure.ac: Require CVL >= 0.2.5.
 	* gnulib/alloca.h: Remove generated file from SVN.
+	* build-aux/glew.m4, build-aux/cvl.m4, configure.ac, src/Makefile.am:
+	Improve detection and usage of external libraries.
 
 2008-07-04  Martin Lambers <marlam@marlam.de>
 
